mx.widgets.vertical_ticker - bugfix: wrong width of ticker in Opera

--- a/app/assets/stylesheets/widgets.css.scss
+++ b/app/assets/stylesheets/widgets.css.scss
@@ -17,6 +17,7 @@
             float: left;
             margin: 0;
             padding: 1em 0 0;
+            white-space: nowrap;
         }
 
         li * {
